<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logoadmin" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/mdm_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

</LinearLayout>